secondfile/objects/DHStatus_Location_Designations__c.object
<CustomObject>
    <description>RDS-Deal Hash-Update Deal Hash Details-ASR Details-Location Desingations</description>
    <fields>
        <fullName>DHStatus_ASR_Details__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>RDS-Deal Hash-Update Deal Hash Details- ASR Details</description>
        <label>DHStatus-ASR Details</label>
        <referenceTo>DHStatus_ASR_Details__c</referenceTo>
        <relationshipLabel>DHStatus-Location Designations</relationshipLabel>
        <relationshipName>DHStatus_Location_Designations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Designator__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details- ASR Details-Locations Desingations</description>
        <label>Designator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details- ASR Details-Locations Designations</description>
        <label>Value</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>DHStatus-Location Designations</label>
    <nameField>
        <displayFormat>LD-{00000}</displayFormat>
        <label>DHStatus-Location Designations Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DHStatus-Location Designations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>